--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <li>
                 <span class="score0">Grey</span> background: The letter does not appear in the word.
             </li>
+            <li>
+                <span class="score3">Grey word</span>: The word is not in the word list (e.g. plurals), so this doesn't count as a guess.
+            </li>
         </ul>
         </p>
         <p>
