--- a/index.html
+++ b/index.html
@@ -13,22 +13,19 @@
         <p>
             Guess the word!
             You get seven tries.
-            The computer chooses from a list of
-            five letter dictionary words.
             The words are root words,
-            meaning no plurals or conjugations,
-            but can include scientific terms.
+            meaning <em>no plurals</em> or conjugations.
         </p>
         <p>
         <ul>
             <li>
-                <span class="score2">Green</span> background: Right letter, right place.
+                <span class="score2">Green</span> letter: Right letter, right place.
             </li>
             <li>
-                <span class="score1">Blue</span> background: The letter appears somewhere else in the word.
+                <span class="score1">Blue</span> letter: The letter appears somewhere else in the word.
             </li>
             <li>
-                <span class="score0">Grey</span> background: The letter does not appear in the word.
+                <span class="score0">Grey</span> letter: The letter does not appear in the word.
             </li>
             <li>
                 <span class="score3">Grey word</span>: The word is not in the word list (e.g. plurals), so this doesn't count as a guess.
