--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
+<!DOCTYPE html>
 <head>
     <title>PIA5LW: A word game</title>
     <script src="index.js"></script>
-    <link href="index.css" rel="stylesheet" />
     <link href="normalize.css" rel="stylesheet" />
+    <link href="index.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
 </head>
 
 <body>
